fix spacing on Contact Blocks on Flexible page templates

--- a/src/assets/scss/content/flexible/_flexible.scss
+++ b/src/assets/scss/content/flexible/_flexible.scss
@@ -37,4 +37,14 @@
 			margin-bottom: 0;
 		}
 	}
+
+	.contact-group {
+		&:not(:first-child) {
+			margin-top: 2em;
+		}
+
+		&:not(:last-child) {
+			margin-bottom: 2em;
+		}
+	}
 }
