--- a/src/assets/scss/content/programs/_archive.scss
+++ b/src/assets/scss/content/programs/_archive.scss
@@ -59,3 +59,7 @@
 		}
 	}
 }
+
+.deg-progs-content {
+	padding: 1.5rem 8vw;
+}
